[package]
name = "gunzip_benchmark"
version = "0.1.0"

[dependencies]
flate2 = { version = "1.0.1", features = ["zlib"], default-features = false }
libflate = "0.1.14"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false
